[project]
name = "provenance_track"
version = "1.2.1"
dependencies = []
requires-python= ">= 3.8"
readme = "README.md"
authors = [
    {name = "Gerard"},
    {email = "gweatherby@uchc.edu"}
]
dynamic = ["license"] 

#[project.scripts]
#provenance_track = "provenance_track.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

