[metadata]
description = TBD 
license = MIT license 

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	provenance_track
install_requires =

[options.entry_points]
console_scripts = 
	provenance_track = provenance_track.main:main 

[build_ext]
debug = 1

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md

